--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backTemp",
+  "name": "tempertuare",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,6 +7,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "fu",
+  "license": "ISC",
+  "dependencies": {
+    "koa": "^2.11.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^8.0.8",
+    "koa-static": "^5.0.0",
+    "mongoose": "^5.9.1"
+  },
+  "devDependencies": {
+    "koa2-cors": "^2.0.6"
+  }
 }
